<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	tools:context=".MatchList" >

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			style="@style/selector_title_centered"
			android:text="@string/teams" />

		<LinearLayout
			android:id="@+id/addTeams"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<AutoCompleteTextView
				android:id="@+id/autoCompleteTeam1"
				style="@style/team_autocomplete"
				android:hint="@string/team_1" />

			<AutoCompleteTextView
				android:id="@+id/autoCompleteTeam2"
				style="@style/team_autocomplete"
				android:hint="@string/team_2" />
		</LinearLayout>

		<TextView
			style="@style/selector_title_centered"
			android:text="@string/players_optional_" />

		<LinearLayout
			android:id="@+id/addPlayers"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical" >

				<AutoCompleteTextView
					android:id="@+id/autocompletePlayer1i"
					style="@style/player_autocomplete" />

				<AutoCompleteTextView
					android:id="@+id/autocompletePlayer1ii"
					style="@style/player_autocomplete" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical" >

				<AutoCompleteTextView
					android:id="@+id/autocompletePlayer2i"
					style="@style/player_autocomplete" />

				<AutoCompleteTextView
					android:id="@+id/autocompletePlayer2ii"
					style="@style/player_autocomplete" />
			</LinearLayout>
		</LinearLayout>

		<Button
			android:id="@+id/createMatch"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:onClick="createMatch"
			android:text="@string/createMatch"
			android:textSize="20sp" />
	</LinearLayout>

</ScrollView>