<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5dp" >

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/team1wins"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:gravity="right"
				android:paddingLeft="5dp"
				android:singleLine="true"
				android:textSize="@dimen/match_list_team_wins_text_size" />

			<TextView
				android:id="@+id/team1name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@id/team1wins"
				android:gravity="left"
				android:singleLine="true"
				android:textSize="@dimen/match_list_team_name_text_size" />
		</RelativeLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:text="@string/score_divider"
			android:textSize="@dimen/match_list_team_name_text_size" />

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/team2wins"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:gravity="left"
				android:paddingRight="5dp"
				android:singleLine="true"
				android:textSize="@dimen/match_list_team_wins_text_size" />

			<TextView
				android:id="@+id/team2name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/team2wins"
				android:gravity="right"
				android:singleLine="true"
				android:textSize="@dimen/match_list_team_name_text_size" />
		</RelativeLayout>
	</LinearLayout>

	<TextView
		style="@style/selector_title"
		android:layout_width="fill_parent"
		android:padding="5dp"
		android:text="@string/list_of_rounds" />

	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@color/holo_blue_light" />

	<ListView
		android:id="@+id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" />

	<TextView
		android:id="@+id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center_horizontal"
		android:text="@string/rounds_no_items" />

</LinearLayout>